# colombus

./: .env.sample  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Caddyfile  Dockerfile  Dockerfile.postgres  Dockerfile.prod  LICENSE  README.md  codemeta.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  ppm_to_regex_function.sql  pyproject.toml  requirements.txt  test_parse.py  ui_pre-commit_lint.sh
.github/workflows/: ci.yml  release.yml
app/: auth.py  constants.py  dependencies.py  exceptions.py  main.py  settings.py  test_parse.py
app/models/: api_model.py  graph_model.py  model.py  sql_model.py
app/routers/: auth_router.py  pattern_router.py  profile_router.py  project_router.py  statistics_router.py  utils_router.py
app/service/: kaggle_service.py  notebook.py
app/templates/: ppm_template.sql  ppm_template_regex.sql
app/utils/: __init__.py  convert_canopus_to_legacy.py  convert_ppm_to_regex.py  convert_ppm_to_sql.py  convert_ppm_to_sql.py.wip  diff_stats_exploration.py  factory.py  file_helper.py  save_notebook_graph.py  save_notebook_sql.py  visitor.py
imported_prototype/: package-lock.json  package.json
ui/: .env.development  .gitignore  .pnp.cjs  Dockerfile  Dockerfile.prod  biome.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/.storybook/: main.ts
ui/prototype/: README.md  index.html  package.json  tsconfig.build.json  vite.config.ts
ui/prototype/.github/: copilot-instructions.md
ui/prototype/.storybook/: main.ts  preview.ts
ui/prototype/src/: index.ts  main.tsx  vite-env.d.ts
ui/prototype/storybook-static/: iframe.html  index.json  project.json
ui/src/: App.tsx  Auth.tsx  RequireApiKey.tsx  RequireProject.tsx  index.css  main.tsx  root-layout.tsx  useGraph.ts  vite-env.d.ts
ui/src/api/: client.ts
ui/src/components/: Sidebar.tsx  WorkspaceHeader.tsx  create-pattern-panel.tsx  delete-pattern-dialog.tsx  graph-container.tsx  graph-controls.tsx  home.tsx  import-modal.tsx  navbar.tsx  notebook-scores-panel.tsx  profile-code-viewer-v3.stories.tsx  profile-code-viewer-v3.tsx  profile-code-viewer.stories.tsx  profile-code-viewer.tsx  profile-explorer-graph-settings-bar.tsx  profile-explorer-pattern-bar.tsx  profile-explorer-ppm-results-bar.tsx  profile-pattern-actions.tsx  profile-pattern-dsl-editor.tsx  profile-pattern-editor.tsx  profile-pattern-group-metainstruction-modal.tsx  profile-pattern-group-modal.tsx  profile-pattern-list.tsx  profile-pattern-stats-freq-matrix.tsx  profile-pattern.tsx  profile-score-distribution-chart.tsx  project-apikey-form.tsx  (+7 more)
(+156 files in other folders)
