[project]
name = "colombus"
version = "0.1.0"
description = "Colombus - The ML pipelines exploration platform"
authors = []
readme = "README.md"
requires-python = ">=3.12.0,<4.0"
dependencies = [
    "fastapi[standard]>=0.120.2",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.4",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.12.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.7",
]

[tool.uv]
default-groups = []

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[tool.flake8]
max-line-length = 120
