[project]
name = "colombus"
version = "0.1.0"
description = "Colombus - The ML pipelines exploration platform"
authors = [
    { name = "Nicolas Lacroix", email = "nicolas.lacroix@univ-cotedazur.fr" }
]
readme = "README.md"
requires-python = ">=3.12.0,<4.0"
dependencies = [
    "canopus-dsl",
    "fastapi[standard]>=0.120.2",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.4",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.7",
    "pre-commit>=3.7",
    "types-ujson>=5.10.0.20250822",
]

[tool.uv]
default-groups = []

[tool.uv.sources]
canopus-dsl = { git = "https://github.com/colombus-dev/canopus-dsl", tag = "v0.1.0"  }

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = ["app/"]
sort_by_size = true
verbose = false
